--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@
     </section>
 </body>
 
+<footer class="footer">
+     <span class="smallerWhiteText">Copyright © 2019 Dominic Järmann</span>
+    <a class="smallerWhiteText" href="https://brankovic.dev">www.brankovic.dev has copied my Site. This is scam</a>
+</footer>
+
 </html>
