--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <link rel="stylesheet" href="main.css">
-<html>
+<html id="html">
+    <render></render>
+    <head>
+        <script src="functions.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+        <script src="https://rawcdn.githack.com/Dominic12/NailsJS/ee448d26b90dc0967bb7f740931922c2e85cf077/nails/main.js"></script>
+        <script src="https://rawcdn.githack.com/Dominic12/NailsJS/ee448d26b90dc0967bb7f740931922c2e85cf077/nails/nails.js"></script>
+        <script src="main.js"></script>
+
+    </head>
 
 <body>
     <section class="center">
-        <span class="whiteText">There is nothing here. Go do something else</span>
+        <span class="whiteText" id="html">There is nothing here. Go do something else</span>
         <span class="blinking-cursor"> | </span>
     </section>
 </body>
